Setup project deps and builing

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@
 
 # debug information files
 *.dwo
+
+# 3rdparts src files
+*glfw_src/
+
+# cmake build dir
+build/
+
+# lsp cache files
+.cache/
